--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Koala</h1>
     
-        <img src="img/162626-004-C076EDBD.jpg" alt="">
+        <img src="162626-004-C076EDBD.jpg" alt="">
         <div class = "head">
             <i>Koalas have a pouch</i>
                 <div class = "feet">
